<resources>
    <string name="app_name">CND PatientApp</string>
    <string name="next">NEXT</string>
    <string name="previous">PREVIOUS</string>
    <string name="submit">SUBMIT</string>
    <string name="mainTitle">REQUEST CONSULT</string>
    <string name="firstnameLabel">First Name</string>
    <string name="lastnameLabel">Last Name</string>
    <string name="phoneLabel">Phone Number</string>
    <string name="symptomsLabel">How can we help?</string>
    <string name="summary">SUMMARY</string>
    <string name="success">SUCCESS!</string>
    <string name="successFollowUp1">A doctor will contact you at the number you provided shortly</string>
    <string name="successFollowUp2">Please call xxxx if you have any questions</string>
    <string name="quit">QUIT</string>
    <string name="radioMale">Male</string>
    <string name="radioFemale">Female</string>
    <string name="genderLabel">Gender</string>
    <string name="confirmAccept">FINISH</string>
    <string name="confirmGoBack">BACK</string>
</resources>
