<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Finish">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/mainTitle"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_width="fill_parent"
                android:layout_height="100dp" />


            <TextView
                android:textSize="30sp"
                android:text="@string/success"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/successFollowUp1"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/successFollowUp2"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:weightSum="2">

            <Button
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/quit"
                android:onClick="finish" />

        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>