<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/mainTitle"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_width="fill_parent"
                android:layout_height="100dp" />


            <TextView
                android:textSize="20sp"
                android:text="@string/nameLabel"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="20sp"
                android:text="@string/phoneLabel"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="20sp"
                android:text="@string/symptomsLabel"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:inputType="text|textMultiLine"
                android:gravity="top"
                android:layout_width="fill_parent"
                android:layout_height="200dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:weightSum="2">

            <Button
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/submit"
                android:onClick="goToSymptoms" />

        </LinearLayout>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>